--- a/src/app/MeshGradient.css
+++ b/src/app/MeshGradient.css
@@ -2,11 +2,14 @@
    BASE SETUP
 ================================ */
 @import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
 .heading {
   font-family: "Sacramento", cursive;
 }
-
+.special-heading {
+  font-family: "Playfair Display", serif;
+}
 .blob {
   position: absolute;
   border-radius: 50%;
