--- a/src/app/MeshGradient.css
+++ b/src/app/MeshGradient.css
@@ -144,18 +144,18 @@
   color: white;
 }
 .Profile {
-  min-height: 100%;
+  min-height: 100% !important;
   width: auto;
 }
 @media (max-width: 768px) {
   .Profile {
-    max-height: 144px;
+    max-height: 144px !important;
     width: auto;
   }
 }
 @media (min-width: 768px) and (max-width: 930px) {
   .Profile {
-    max-height: 170px;
+    max-height: 170px !important;
     width: auto;
   }
 }
